tests/parser/rparen_expected.expected
<string>:2:15: error: expected RParen, not IntLiteral
    ( 43 + 42 11 )
              ^^